# serial_duplex

./: CMakeLists.txt
include/: serial_comm.h  serial_comm_linux.h  struct.h
legacy/: main2.cpp  serial_comm2.h
mbed/: main.cpp  motor_pwm.cpp  motor_pwm.h  mpu9250.h
src/: main_parani_rx.cpp  main_parani_tx.cpp  main_serial_rx.cpp  serial_comm_linux.cpp
